fixing mobile spacing on hero section v0.0.7

--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,6 @@ main {
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
  */
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-
 /* Grouping content
    ========================================================================== */
 /**
@@ -739,6 +734,11 @@ body {
   max-inline-size: 25rem;
 }
 
+@media only screen and (max-width: 767.99px), only screen and (min-width: 768px) and (max-width: 1198.99px) {
+  .hero-graphic {
+    margin-block-end: 2.5rem;
+  }
+}
 .hero-graphic-tag {
   --p-text-color: hsl(var(--clr-primary-400), 65);
   --p-border-color: var(--p-text-color);
@@ -829,6 +829,10 @@ body {
     margin-block-end: 0.75rem;
   }
 }
+.hero-body {
+  margin-block-start: 1.5rem;
+}
+
 @media only screen and (max-width: 767.99px), only screen and (min-width: 768px) and (max-width: 1198.99px) {
   .hero-body {
     margin-block-end: 2.5rem;
